--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.0",
+    "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
